# loop-engineer

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-17-loop-engineer-p1-contracts.md  2026-07-17-loop-engineer-p2a-runtime-core.md  (+1 more)
schemas/: README.md  manifest.json
schemas/v1/: claim.schema.json  command.schema.json  event.schema.json  evidence.schema.json  fence.schema.json  goal.schema.json  goal_definition.schema.json  handoff.schema.json  lease.schema.json  plan.schema.json  provenance.schema.json  recovery.schema.json  task.schema.json  task_board_entry.schema.json  task_execution_meta.schema.json
scripts/: __init__.py  export_schemas.py
skills/goal-to-omc-team/: SKILL.md
skills/goal-to-omx-team/: SKILL.md
src/loop_engineer/: __init__.py
tests/: conftest.py
tests/cli/: test_goal_cli.py  test_plan_cli.py  test_scheduler_cli.py  test_task_cli.py
tests/contract/: test_dag_acyclicity.py  test_exit_code_classes.py  test_schema_freeze_drift.py  test_schema_roundtrip.py
tests/probe/: test_capabilities_fake.py
tests/runtime/: test_board_concurrency.py
tests/scheduler/: test_conflicts.py  test_eligibility.py  test_engine.py  test_models.py  test_planner.py
tests/unit/: test_board.py  test_claim_lease.py  test_command_envelope.py  test_compiler.py  test_definition.py  test_enums.py  test_event_envelope.py  test_evidence_handoff.py  test_fence.py  test_goal.py  test_journal_semantics.py  test_paths.py  test_plan_dag.py  test_provenance.py  test_provider_task_run.py  test_recovery_record.py  test_scope.py  test_task.py
(+64 files in other folders)
