[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-engineer"
version = "0.1.0a1"
description = "Durable orchestration toolkit turning measurable goals into recoverable engineering loops."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD - pending provenance review (see plan D8)" }
authors = [{ name = "Loop Engineer" }]
dependencies = [
  "pydantic>=2.7,<3",
  "jsonschema>=4.21,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
loop-engineer = "loop_engineer.cli:main"   # CLI lands in P2; stub created then

[tool.hatch.build.targets.wheel]
packages = ["src/loop_engineer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
